--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 
     <style>
       .map {
-        height: 400px;
-        width: 100%;
+        height: 350px;
+        width: 75%;
+        margin: 0 auto;
       }
     </style>
 
@@ -19,7 +20,7 @@
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-  <body>
+  <body style="width: 980px; margin: 0 auto">
     <%= yield %>
   </body>
 </html>
