--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.map {
+  height: 100%;
+  width: 75%;
+}
+
+ul {
+  list-style: none;
+}
