Add CSV handlers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,17 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+}
+
+.flash-bar {
+  position: fixed;
+  width: calc(100% - 160px);
+  height: 20px;
+  padding: 5px 80px;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 1;
+  color: #f0f0f0;
 }
 
 .map {
@@ -28,3 +39,4 @@ html, body {
 ul {
   list-style: none;
 }
+
