--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
             crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.1/build/ol.js"></script>
-    <script src="maps.js"></script>
+    <script src="/maps.js"></script>
   </head>
 
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
