--- a/app/views/donors/index.html.haml
+++ b/app/views/donors/index.html.haml
@@ -10,7 +10,7 @@
       - status = 'blank' if status.nil?
       = link_to status, donors_path(status: status)
 
-  - fields = %i(timestamp address_city region number_of_masks status)
+  - fields = %i(timestamp address_street address_city number_of_masks status)
   %table.pure-table.pure-table-bordered
     %thead
       %tr
